--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/m-mdy-m/XprsJS/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/XprsJS#readme"
+  "homepage": "https://github.com/m-mdy-m/XprsJS#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
