--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start" : "nodemon src/shared/app.js"
+    "start": "nodemon src/shared/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/m-mdy-m/XprsJS#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2"
   },
   "devDependencies": {
