--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "ejs": "^3.1.9",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3"
   }
