--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "ejs": "^3.1.9",
+    "express-session": "^1.18.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3"
   }
