--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "ejs": "^3.1.9",
-    "express-session": "^1.18.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.3"
+    "jest": "^29.7.0"
   }
 }
