--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "XprsJS is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With XprsJS, you can define routes, handle middleware, and set up an Express.js server with ease.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon src/shared/app.js"
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
