--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "supertest": "^6.3.4"
   }
