--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xprsjs",
+  "name": "@m-mdy-m/xpress",
   "version": "1.0.0",
   "description": "XprsJS is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With XprsJS, you can define routes, handle middleware, and set up an Express.js server with ease.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/m-mdy-m/XprsJS.git"
+    "url": "git+https://github.com/m-mdy-m/XPress.git"
   },
   "keywords": [
     "express",
@@ -17,9 +17,9 @@
   "author": "Mahdi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/m-mdy-m/XprsJS/issues"
+    "url": "https://github.com/m-mdy-m/XPress/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/XprsJS#readme",
+  "homepage": "https://github.com/m-mdy-m/XPress/blob/main/README.md",
   "dependencies": {
     "express": "^4.18.2"
   },
