--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "xprsy",
+  "name": "@m-mdy-m/xprz",
   "version": "1.0.0",
-  "description": "XprsJS is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With XprsJS, you can define routes, handle middleware, and set up an Express.js server with ease.",
+  "description": "Xprz is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With Xprz, you can define routes, handle middleware, and set up an Express.js server with ease.",
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/m-mdy-m/XPress.git"
+    "url": "git+https://github.com/m-mdy-m/Xprz.git"
   },
   "keywords": [
     "express",
@@ -17,9 +17,9 @@
   "author": "Mahdi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/m-mdy-m/XPress/issues"
+    "url": "https://github.com/m-mdy-m/Xprz/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/XPress/blob/main/README.md",
+  "homepage": "https://github.com/m-mdy-m/Xprz/blob/main/README.md",
   "dependencies": {
     "express": "^4.18.2"
   },
