--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@m-mdy-m/xprz",
+  "name": "xprz",
   "version": "1.0.0",
   "description": "Xprz is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With Xprz, you can define routes, handle middleware, and set up an Express.js server with ease.",
   "main": "index.js",
