--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "xprz": "^1.0.0"
   }
 }
