--- a/package.json
+++ b/package.json
@@ -24,13 +24,6 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "jest": "^29.7.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "supertest": "^6.3.4"
+    "jest": "^29.7.0"
   }
 }
