--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/m-mdy-m/Xprz/blob/main/README.md",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.10"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^29.7.0"
