--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@m-mdy-m/xprz",
-  "version": "1.1.4",
+  "name": "xprz",
+  "version": "1.1.5",
   "description": "Xprz is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With Xprz, you can define routes, handle middleware, and set up an Express.js server with ease.",
   "main": "index.js",
   "scripts": {
