--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/m-mdy-m/Xprz/blob/main/README.md",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "vfyjs": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
