--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "xprz",
-  "version": "2.0.0",
+  "name": "@m-mdy-m/xprz",
+  "version": "2.0.1",
   "description": "Xprz is a lightweight and concise wrapper for Express.js, designed to simplify the process of building web applications with a minimalistic syntax. With Xprz, you can define routes, handle middleware, and set up an Express.js server with ease.",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --detectOpenHandles"
-  },
+  "main": "xprz.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/m-mdy-m/Xprz.git"
