Update .npmignore - add example and docs directories
This commit updates the .npmignore file to ignore the 'example' and 'docs' directories. Additionally, the 'example' file in the 'example' directory is also ignored. Other unrelated changes include ignoring the 'test' directory and some editor/IDE files, and keeping the 'tsconfig.json' and 'babel.config.js' configuration files.

--- a/.npmignore
+++ b/.npmignore
@@ -7,12 +7,15 @@ node_modules/
 tests/
 test/
 *.test.js
-
+example/
+example
 # Ignore editor and IDE files
 .vscode/
 .idea/
 *.sublime-*
 
+docs/
+docs
 # Ignore configuration files (keep this line)
 tsconfig.json
 babel.config.js
